[package]
name = "packet-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
influxdb = { version = "0.7", features = ["derive"] }
chrono = "0.4"
atty = "0.2"
toml = "0.8"